# qfingerprint

./: CMakeLists.txt  conf-libfprint
src/: CMakeLists.txt  qfingerprint.cpp  qfingerprint.h
tests/: CMakeLists.txt  main.cpp
